--- a/CSS/culture/cultural_News.css
+++ b/CSS/culture/cultural_News.css
@@ -10,158 +10,358 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+/* sticky navbar css */
+header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 1000;
+}
+/* sticky navbar css */
+
 .top-navbar {
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding: 20px;
 }
-.top-navbar h4 {
-    color: #161616;
-    font-size: 18px;
-  }
-  
-  .top-navbar h2 {
-    color: #d30000;
-    font-size: 30px;
-  }
-  
-  .top-navbar .heading-fisrt {
-    color: #161616;
-  }
-  
-  .top-nav-list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 35px;
-  }
-  
-  .top-nav-list li {
-    list-style: none;
-  }
-  
-  .top-nav-list li a {
-    text-decoration: none;
-    color: #d30000;
-    font-size: 15px;
-  }
-  
-  .top-nav-list li a:hover {
-    text-decoration: underline;
-  }
-  
-  .top-nav-icons img {
-    width: 25px;
-    margin-right: 10px;
-  }
-  
-  .top-nav-search-bar {
-    background-color: white;
-    border-radius: 5px;
-    padding: 8px;
-    border: solid 1px #696969;
-    margin-top: 8px;
-    position: relative;
-  }
-  
-  .top-nav-search-bar input {
-    width: 250px;
-    border: none;
-    outline: none;
-  }
-  
-  .top-nav-search-bar img {
-    width: 17px;
-    position: absolute;
-    right: 5px;
-    top: 12px;
-    cursor: pointer;
-  }
-  
-  .nav-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    gap: 20px;
-    background-color: #161616;
-  }
-  
-  .nav-list li a {
-    display: block;
-    text-decoration: none;
-    color: #fff;
-    padding: 14px 15px;
-    transition: background-color 0.3s ease;
-  }
-  
-  .nav-list li a:hover {
-    background-color: #313131;
-  }
-  
-  .search-and-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .search-and-bar .menu-bar-icon {
-    width: 22px;
-    display: none;
-  }
-  /* navbar styling end */
-  
-  .back-btn{
-    height: 50px;
-    width: 50px;
-    padding-top:20px;
-    position: absolute;
-    top: -15px;
-    left: 20px;
-  }
-  .readmore-heading-details {
-    position: relative;
-  }
-  
-  .readmore-heading-details h1 {
-    text-transform: uppercase;
-    color: #161616;
-    border-bottom: 3px solid #d80202;
-    padding-top: 7px;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-    text-align: center;
-    margin-top: 25px;
-  }
-  .img_container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-  
-  .front_img{
-    height:670px;
-    width: auto;
-  }
-  .information_block{
-    height: 500px;
-    width: 1000px;
-    margin-top: 30px;
-    font-size: 20px;
-  }
-  .d-t{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    margin-left: 120px;
-  }
 
-  /* footer has been started from here  */
+.top-navbar h4 {
+  color: #161616;
+  font-size: 18px;
+}
+
+.main-logo a {
+  text-decoration: none;
+}
+
+.top-navbar h2 {
+  color: #d30000;
+  font-size: 30px;
+}
+
+.top-navbar .heading-fisrt {
+  color: #161616;
+}
+
+.top-nav-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 35px;
+}
+
+.top-nav-list li {
+  list-style: none;
+}
+
+.top-nav-list li a {
+  text-decoration: none;
+  color: #d30000;
+  font-size: 15px;
+}
+
+.top-nav-list li a:hover {
+  text-decoration: underline;
+}
+
+.top-nav-icons img {
+  width: 25px;
+  margin-right: 10px;
+}
+
+.top-nav-search-bar {
+  background-color: white;
+  border-radius: 5px;
+  padding: 8px;
+  border: solid 1px #696969;
+  margin-top: 8px;
+  position: relative;
+}
+
+.top-nav-search-bar input {
+  width: 250px;
+  border: none;
+  outline: none;
+}
+
+.top-nav-search-bar img {
+  width: 17px;
+  position: absolute;
+  right: 5px;
+  top: 12px;
+  cursor: pointer;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  gap: 20px;
+  background-color: #161616;
+}
+
+.nav-list li a {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  padding: 14px 15px;
+  transition: background-color 0.3s ease;
+}
+
+.nav-list li a:hover {
+  background-color: #313131;
+}
+
+.search-and-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.search-and-bar .menu-bar-icon {
+  width: 22px;
+  display: none;
+}
+
+/* navbar styling end */
+
+/* hero section started form here */
+
+.hero-section {
+  position: relative;
+  height: 80vh;
+  overflow: hidden;
+}
+
+.video-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80vh;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.background-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80vh;
+  object-fit: cover;
+  z-index: 0;
+}
+
+.gradient-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  z-index: 1;
+}
+
+.hero-content {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  max-width: 1200px;
+  color: white;
+  text-align: center;
+  z-index: 2;
+  padding: 20px;
+}
+
+.hero-content p {
+  margin-bottom: 20px;
+}
+
+.hero-content h1 {
+  font-size: 45px;
+  margin-bottom: 10px;
+}
+
+.hero-content a {
+  background-color: #d30000;
+  color: white;
+  margin-top: 10px;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: transform 0.4s ease, background-color 0.4s ease;
+}
+
+.hero-content a:hover {
+  transform: scale(1.1);
+  background-color: rgb(170, 7, 7);
+}
+
+/* hero section end here */
+
+/* homepage content card started */
+
+.section-container {
+  max-width: 1300px;
+  margin: auto;
+  padding: 10px;
+  margin-top: 50px;
+}
+
+.homepage-content {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.homepage-Cards-container {
+  flex: 3;
+  max-width: 800px;
+}
+
+.homepage-heading-details {
+  position: relative;
+}
+
+.homepage-heading-details h1 {
+  text-transform: uppercase;
+  color: #161616;
+  border-bottom: 4px solid #d80202;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.hompage-second-card-container {
+  margin-top: 30px;
+}
+
+.more-link {
+  display: inline-block;
+  position: absolute;
+  top: 10px;
+  right: 0;
+  margin-top: 10px;
+  padding-left: 20px;
+  padding-right: 10px;
+  color: white;
+  background-color: #d80202;
+  text-decoration: none;
+}
+
+/* Card styling */
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.card {
+  width: 250px;
+  gap: 15px;
+  border: 1px solid #c9c9c9;
+  border-radius: 5px;
+}
+
+.card img {
+  width: 250px;
+  height: 150px;
+  object-fit: cover;
+  background-position: center;
+  background-size: cover;
+}
+
+.homepage-Card {
+  flex: 1;
+  padding: 4px;
+}
+
+.homepage-Card h3 {
+  font-size: 13px;
+}
+
+.homepage-Card p {
+  font-size: 12px;
+}
+
+.homepage-Card a {
+  font-size: 12px;
+  color: #d80202;
+  text-decoration: none;
+}
+
+/* Sidebar styling */
+.homepage-Sidebar {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 200px;
+}
+
+.sidebar-section {
+  margin-bottom: 20px;
+}
+
+.sidebar-section a {
+  display: block;
+  font-size: 14px;
+  margin: 10px 0px;
+  cursor: pointer;
+  color: #313131;
+  text-decoration: none;
+}
+
+.sidebar-section a:hover {
+  color: red;
+}
+
+.sidebar-section button {
+  padding: 8px 14px;
+  background-color: #d80202;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.sidebar-section button:hover {
+  background-color: #d80202e0;
+}
+.newsletter-section form {
+  display: flex;
+  flex-direction: column;
+}
+
+.newsletter-section input {
+  margin-bottom: 10px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.newsletter-section button {
+  padding: 10px;
+  background-color: #d80202;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.newsletter-section button:hover {
+  background-color: #d80202e0;
+}
+
+/* homepage content card ended */
+
+/* footer has been started from here  */
 
 .footer-section {
   padding: 40px 20px;
@@ -247,6 +447,283 @@ body {
   font-weight: 400;
 }
 
-
-
 /* footer has been Ended here  */
+
+/* Mobile Device */
+
+@media screen and (max-width: 500px) {
+  .top-navbar {
+    flex-direction: column;
+  }
+
+  .top-navbar h4 {
+    font-size: 16px;
+  }
+
+  .top-navbar h2 {
+    font-size: 24px;
+  }
+
+  .top-nav-search-bar input {
+    width: 330px;
+  }
+  .top-navbar {
+    flex-direction: column;
+  }
+
+  .top-nav-icons img {
+    display: none;
+  }
+
+  .top-nav-list {
+    margin: 8px auto;
+  }
+
+  .top-nav-search-bar input {
+    width: 280px;
+  }
+
+  .nav-list {
+    display: none;
+  }
+  .search-and-bar {
+    gap: 20px;
+    margin-top: 14px;
+  }
+  .search-and-bar .menu-bar-icon {
+    display: block;
+    cursor: pointer;
+  }
+
+  .top-nav-search-bar {
+    padding: 4px 10px;
+    margin-top: 0px;
+  }
+
+  .top-nav-search-bar img {
+    width: 8x;
+    top: 8px;
+  }
+
+  .hero-content {
+    left: 0px;
+    padding: 20px;
+  }
+
+  .hero-content h1 {
+    font-size: 25px;
+  }
+
+  .hero-content p,
+  a {
+    font-size: 14px;
+  }
+
+  .homepage-heading-details h1 {
+    border-bottom: 2px solid #d80202;
+    font-size: 16px;
+    padding-bottom: 2px;
+  }
+
+  .more-link {
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    right: 0;
+    margin-top: 0px;
+    padding-left: 10px;
+    padding-right: 5px;
+    font-size: 12px;
+  }
+
+  .section-container {
+    margin-top: 20px;
+  }
+  .card {
+    width: 300px;
+  }
+
+  .card img {
+    width: 300px;
+  }
+
+  /* Sidebar styling */
+
+  .sidebar-section {
+    padding: 0px 25px;
+  }
+
+  .sidebar-section h2 {
+    font-size: 20px;
+  }
+
+  .sidebar-section a {
+    font-size: 13px;
+  }
+
+  .sidebar-section button {
+    padding: 5px 12px;
+    font-size: 12px;
+  }
+
+  .sidebar-section button:hover {
+    background-color: #d80202e0;
+  }
+
+  .newsletter-section {
+    padding: 0px 25px;
+  }
+
+  .newsletter-section h2 {
+    font-size: 20px;
+    margin-bottom: 8px;
+  }
+
+  .hero-content {
+    top: 45%;
+    left: 50%;
+    width: 80%;
+  }
+
+  .footer-nav-links {
+    margin-bottom: 20px;
+  }
+
+  .footer-nav-links a {
+    font-size: 14px;
+  }
+
+  .footer-nav-links ul li {
+    font-size: 14px;
+  }
+}
+/* Tablet Device */
+
+@media screen and (min-width: 500px) and (max-width: 820px) {
+  .top-navbar {
+    flex-direction: column;
+  }
+
+  .top-nav-icons img {
+    display: none;
+  }
+
+  .top-nav-list {
+    margin: 8px auto;
+  }
+  .top-nav-search-bar input {
+    width: 400px;
+  }
+
+  .top-navbar h4 {
+    font-size: 18px;
+  }
+
+  .top-navbar h2 {
+    font-size: 28px;
+  }
+  .nav-list {
+    gap: 2px;
+    padding: 5px 0;
+  }
+
+  .nav-list li a {
+    padding: 8px 5px;
+    font-size: 14px;
+  }
+  .hero-content {
+    left: 0px;
+    padding: 25px;
+  }
+
+  .hero-content h1 {
+    font-size: 28px;
+  }
+
+  .hero-content p,
+  a {
+    font-size: 16px;
+  }
+
+  .homepage-heading-details h1 {
+    border-bottom: 2px solid #d80202;
+    font-size: 18px;
+    padding-bottom: 2px;
+  }
+
+  .more-link {
+    display: inline-block;
+    position: absolute;
+    top: 11px;
+    margin-top: 0px;
+    padding-left: 10px;
+    padding-right: 5px;
+    font-size: 13px;
+  }
+
+  /* cards */
+
+  .cards {
+    flex-wrap: wrap;
+  }
+
+  .homepage-Card h3 {
+    font-size: 13px;
+  }
+
+  .homepage-Card p {
+    font-size: 12px;
+  }
+
+  .homepage-Card a {
+    font-size: 12px;
+    color: #d80202;
+    text-decoration: none;
+  }
+
+  /* Sidebar styling */
+
+  .sidebar-section {
+    padding: 0px 10px;
+  }
+
+  .sidebar-section h2 {
+    font-size: 20px;
+  }
+
+  .sidebar-section a {
+    font-size: 13px;
+  }
+
+  .sidebar-section button {
+    padding: 5px 12px;
+    font-size: 12px;
+  }
+
+  .sidebar-section button:hover {
+    background-color: #d80202e0;
+  }
+
+  .newsletter-section h2 {
+    font-size: 20px;
+    margin-bottom: 8px;
+  }
+
+  .hero-content {
+    top: 45%;
+    left: 50%;
+    width: 60%;
+  }
+
+  .footer-nav-links {
+    margin-bottom: 20px;
+  }
+
+  .footer-nav-links a {
+    font-size: 14px;
+  }
+
+  .footer-nav-links ul li {
+    font-size: 14px;
+  }
+}
