--- a/CSS/sportstyle.css
+++ b/CSS/sportstyle.css
@@ -207,20 +207,19 @@ body {
 }
 
 /* Card styling */
-.cards {
+ /* Card styling */
+ .cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap:10px;
-  
+  gap: 20px;
 }
 
 .card {
-  width:250px;
+  width: 250px;
   gap: 15px;
   border: 1px solid #c9c9c9;
-  border-radius: 10px;
-  padding:2px;
+  border-radius: 5px;
 }
 
 .card img {
@@ -229,7 +228,6 @@ body {
   object-fit: cover;
   background-position: center;
   background-size: cover;
-
 }
 
 .sport-Card {
@@ -440,4 +438,45 @@ body {
   height: 50px;
   width: 50px;
   padding-top:10px;
+}
+.format
+{
+  background-color:#f0f0f0;
+  text-align: center;
+  border:0px solid white;
+  margin:50px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width:1500px ;
+  height:700px;
+
+}
+.item4
+{
+  margin-top:50px;
+  background-color: white;
+  text-align: center;
+  margin:50px;
+  padding:20px;
+  border:1px solid rgb(225, 218, 218);
+  border-radius:10px;
+height:600px;
+  box-shadow:0px 5px 0px 5px rgb(224, 222, 222);
+
+}
+.button{
+  border:1px solid black;
+  background-color:white;
+  text-align: center;
+  padding:20px;
+  margin:20px;
+  font-size:15px;
+  border-radius:5px 5px;
+  width:400px;
+  
+}
+.button:hover{
+  border:3px solid blue;
+
 }
